@@ -1,6 +1,7 @@
 /* listbasic.c: extract the BASIC listing from a snapshot or tape file
    Copyright (c) 2002 Chris Cowley
                  2003 Philip Kendall, Darren Salt
+                 2007 Stuart Brady
 
    $Id$
 
@@ -42,6 +43,8 @@
 /* argv[0] */
 char *progname;
 
+int betabasic = 0;
+
 /* A function used to read memory */
 typedef
   libspectrum_byte (*memory_read_fn)( libspectrum_word offset, void *data );
@@ -61,23 +64,36 @@ int detokenize( libspectrum_word offset, int length,
 
 int main(int argc, char* argv[])
 {
-  int error;
   unsigned char *buffer; size_t length;
   libspectrum_id_t type;
   libspectrum_class_t class;
 
+  int c;
+  int error;
+
   progname = argv[0];
 
-  if( argc != 2 ) {
-    fprintf( stderr, "%s: usage: %s <file>\n", progname, progname );
+  while( ( c = getopt( argc, argv, "b" ) ) != -1 ) {
+
+    switch( c ) {
+
+    case 'b': betabasic = 1; break;
+
+    }
+  }
+  argc -= optind;
+  argv += optind;
+
+  if( argc != 1 ) {
+    fprintf( stderr, "%s: usage: %s [-b] <file>\n", progname, progname );
     return 1;
   }
 
   error = init_libspectrum(); if( error ) return error;
 
-  error = read_file( argv[1], &buffer, &length ); if( error ) return error;
+  error = read_file( argv[0], &buffer, &length ); if( error ) return error;
 
-  error = libspectrum_identify_file_with_class( &type, &class, argv[1], buffer,
+  error = libspectrum_identify_file_with_class( &type, &class, argv[0], buffer,
 						length );
   if( error ) { free( buffer ); return error; }
 
@@ -95,13 +111,13 @@ int main(int argc, char* argv[])
 
   case LIBSPECTRUM_CLASS_UNKNOWN:
     fprintf( stderr, "%s: couldn't identify the file type of `%s'\n",
-	     progname, argv[1] );
+	     progname, argv[0] );
     free( buffer );
     return 1;
 
   default:
     fprintf( stderr, "%s: `%s' is an unsupported file type\n",
-	     progname, argv[1] );
+	     progname, argv[0] );
     free( buffer );
     return 1;
 
@@ -276,15 +292,18 @@ extract_basic( libspectrum_word offset, libspectrum_word end,
     offset += 2;
     if( line_number >= 16384 ) break;
 
-    printf( "%5d", line_number );
-
     line_length = get_byte( offset, data ) | get_byte( offset + 1, data ) << 8;
     offset += 2;
 
-    error = detokenize( offset, line_length, get_byte, data );
-    if( error ) return error;
+    /* Hide line 0 for Beta BASIC */
+    if( line_number != 0 || !betabasic ) {
+      printf( "%5d", line_number );
 
-    printf( "\n" );
+      error = detokenize( offset, line_length, get_byte, data );
+      if( error ) return error;
+
+      printf( "\n" );
+    }
 
     offset += line_length;
   }
@@ -316,6 +335,9 @@ detokenize( libspectrum_word offset, int length,
   libspectrum_byte b;
   char space = 1, keyword_next = 1, quote = 0, rem = 0;
 
+  char first; /* set for the first token in each statement */
+  char nextfirst = 1;
+
   static const char keyword[][12] = {
     " SPECTRUM ",
     " PLAY ",	"RND",		"INKEY$",	"PI",
@@ -343,13 +365,33 @@ detokenize( libspectrum_word offset, int length,
     " DRAW ",	" CLEAR ",	" RETURN ",	" COPY "
   };
 
+  /* Beta BASIC keywords: */
+  static const char beta_keyword[][11] = {
+    " KEYWORDS ", " DEF PROC ",	" PROC ",	" END PROC ",
+    " RENUM ",	  " WINDOW ",	" AUTO ",	" DELETE ",
+    " REF ",	  " JOIN ",	" EDIT ",	" KEYIN ",
+    " LOCAL ",	  " DEFAULT ",	" DEF KEY ",	" CSIZE ",
+    " ALTER ",	  " BLANK ",	" CLOCK ",	" DO ",
+    " ELSE ",	  " FILL ",	" GET ",	" ENDIF ",
+    " EXIT IF ",  " WHILE ",	" UNTIL ",	" LOOP ",
+    " SORT ",	  " ON ERROR ",	" ON ",		" DPOKE ",
+    " POP ",	  " ROLL ",	" SCROLL ",	" TRACE ",
+    " USING ",
+  };
+
+  /* The Timex keywords, DELETE, ON ERR, STICK, SOUND, FREE, RESET,
+   * are handled below */
+
   for( i = 0; i < length; i++ ) {
 
     char nextspace = 1;
 
+    first = nextfirst;
+    nextfirst = 0;
+
     b = get_byte( offset + i, data );
 
-    if( b < 144 ) {
+    if( b < 128 ) {
 
       switch( b ) {
 
@@ -374,6 +416,7 @@ detokenize( libspectrum_word offset, int length,
       case  32:
         putchar( b );
         nextspace = 0;
+        nextfirst = first;
         break;
 
       case  34:
@@ -383,6 +426,7 @@ detokenize( libspectrum_word offset, int length,
 
       case  58:
         if( !rem && !quote ) keyword_next = 2;
+        nextfirst = 1;
         putchar( b );
         break;
 
@@ -435,6 +479,29 @@ detokenize( libspectrum_word offset, int length,
 	}
         break;
 	
+      default:
+        if( b < 32 ) continue;
+        putchar( b );
+        break;
+      }
+
+    } else if( betabasic && b >= 128 && b <= 164 ) {
+
+      if( b == 164 && first ) {
+	nextspace = print_keyword( keyword[ b - 163 ], space );
+      } else {
+	nextspace = print_keyword( beta_keyword[ b - 128 ], space );
+
+	if( b == 148 ) { /* ELSE */
+	  nextfirst = 1;
+	  keyword_next = 2;
+	}
+      }
+
+    } else if( b < 163 + 2 * quote ) {
+
+      switch( b ) {
+
       case 128: printf( "\\  " ); break; /* Graphics characters */
       case 129: printf( "\\ '" ); break;
       case 130: printf( "\\' " ); break;
@@ -452,14 +519,10 @@ detokenize( libspectrum_word offset, int length,
       case 142: printf( "\\:." ); break;
       case 143: printf( "\\::" ); break;
 
-      default:
-        if( b < 32 ) continue;
-        putchar( b );
-        break;
+      default: printf( "\\%c", b - 144 + 'a' ); break; /* UDGs */
+
       }
     
-    } else if( b < 163 + 2 * quote ) {	/* UDGs */
-      printf( "\\%c", b - 144 + 'a' );
     } else {
       nextspace = print_keyword( keyword[ b - 163 ], space );
     }
@@ -467,8 +530,8 @@ detokenize( libspectrum_word offset, int length,
     space = nextspace;
 
     switch (b) {
-    case 203: keyword_next = 1; break;	/* THEN */
-    case 234: rem = 1; break;		/* REM */
+    case 203: nextfirst = 1; keyword_next = 1; break;	/* THEN */
+    case 234: nextfirst = 1; rem = 1; break;		/* REM */
     default: if( keyword_next ) keyword_next--; break;
     }
   }
