@@ -193,3 +193,4 @@
 20071007 Makefile.am,man/rzxtool.1,rzxtool.c: complete rewrite of rzxtool
 	 to make it useful with the new RZX model of allowing multiple
 	 snapshots in an RZX file.
+20071007 listbasic.c: add Beta BASIC support to listbasic (Stuart).
